Revert "画像チェンジ課題用"
This reverts commit b7897985d9ccf32c300f09edebb452d05200c651.

--- a/indextest.html
+++ b/indextest.html
@@ -8,13 +8,15 @@
     <button id="btn">change video</button>
     <h1 id="title"></h1>
     <p id="content"></p>
-    <iframe
+    <iframe 
         id="video"
-        width="300"
-        height="200"
-        src=""
-    >
-    </iframe>
+        width="500"
+        height="300"
+        src="about:blank"
+        hrameborder="0"
+        allow="accelerometer"; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+    ></iframe>
     <style>
       #btn {
         padding: .8rem 2rem;
@@ -24,6 +26,6 @@
         color: white;
       }
     </style>
-    <script type="text/javascript" src="ajax.js"></script>
+    <script type="text/javascript" src="ajaxtest.js"></script>
   </body>
 </html>
